crates/unsoundness_checker/tests/snapshots/rules/typing_any_used/markdown_test__snippet_03.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[typing-any-used]: Using `typing.Any` in type annotations can lead to runtime errors.
 --> main.py:6:12
  |
4 |     return {"name": "John", "age": 30}
5 |
6 | user_info: Any = get_user()
  |            ^^^
  |
info: rule `typing-any-used` was selected in the configuration file
